[gd_scene load_steps=7 format=3 uid="uid://bpwmxbivx348f"]

[ext_resource type="Script" path="res://Inventory/avaible_weapons.gd" id="1_r1mpv"]
[ext_resource type="Script" path="res://Inventory/taken_weapons.gd" id="2_24fka"]
[ext_resource type="Script" path="res://Inventory/take.gd" id="3_0nn04"]
[ext_resource type="Script" path="res://Inventory/to_menu.gd" id="4_633ql"]
[ext_resource type="Script" path="res://Inventory/drop.gd" id="5_t61g8"]
[ext_resource type="Texture2D" uid="uid://dnb4yxykccenb" path="res://icon.svg" id="6_0lj8w"]

[node name="inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -1.0
offset_right = 4.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="avaible_weapons" type="ItemList" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 34.0
offset_right = 527.0
offset_bottom = 593.0
script = ExtResource("1_r1mpv")

[node name="taken_weapons" type="ItemList" parent="."]
layout_mode = 0
offset_left = 795.0
offset_top = 28.0
offset_right = 1277.0
offset_bottom = 591.0
script = ExtResource("2_24fka")

[node name="take" type="Button" parent="."]
layout_mode = 0
offset_left = 592.0
offset_top = 510.0
offset_right = 697.0
offset_bottom = 541.0
text = "Take to fight"
script = ExtResource("3_0nn04")

[node name="to_menu" type="Button" parent="."]
layout_mode = 0
offset_left = 215.0
offset_top = 636.0
offset_right = 330.0
offset_bottom = 667.0
text = "Back to menu"
script = ExtResource("4_633ql")

[node name="avaible_weapons_text" type="Label" parent="."]
layout_mode = 0
offset_left = 189.0
offset_top = 5.0
offset_right = 319.0
offset_bottom = 28.0
text = "Avaible weapons"

[node name="taken_weapons_text" type="Label" parent="."]
layout_mode = 0
offset_left = 994.0
offset_top = 4.0
offset_right = 1115.0
offset_bottom = 27.0
text = "Taken weapons"

[node name="drop" type="Button" parent="."]
layout_mode = 0
offset_left = 581.0
offset_top = 593.0
offset_right = 718.0
offset_bottom = 624.0
text = "Drop from taken"
script = ExtResource("5_t61g8")

[node name="weapon_info" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="image" type="TextureRect" parent="weapon_info"]
layout_mode = 0
offset_left = 544.0
offset_top = 40.0
offset_right = 672.0
offset_bottom = 168.0
texture = ExtResource("6_0lj8w")

[node name="name" type="Label" parent="weapon_info"]
layout_mode = 0
offset_left = 552.0
offset_top = 170.0
offset_right = 599.0
offset_bottom = 193.0
text = "Name"

[node name="fire_rate" type="Label" parent="weapon_info"]
layout_mode = 0
offset_left = 552.0
offset_top = 215.0
offset_right = 617.0
offset_bottom = 238.0
text = "Fire rate"

[node name="damage" type="Label" parent="weapon_info"]
layout_mode = 0
offset_left = 551.0
offset_top = 267.0
offset_right = 615.0
offset_bottom = 290.0
text = "Damage"

[node name="bullet_speed" type="Label" parent="weapon_info"]
layout_mode = 0
offset_left = 553.0
offset_top = 312.0
offset_right = 649.0
offset_bottom = 335.0
text = "Bullet speed"

[node name="capacity" type="Label" parent="weapon_info"]
layout_mode = 0
offset_left = 554.0
offset_top = 356.0
offset_right = 620.0
offset_bottom = 379.0
text = "Capacity"

[node name="description" type="Label" parent="weapon_info"]
layout_mode = 0
offset_left = 551.0
offset_top = 410.0
offset_right = 640.0
offset_bottom = 433.0
text = "Description"

[connection signal="item_selected" from="avaible_weapons" to="avaible_weapons" method="_on_item_selected"]
[connection signal="item_selected" from="taken_weapons" to="taken_weapons" method="_on_item_selected"]
[connection signal="gui_input" from="take" to="take" method="_on_gui_input"]
[connection signal="gui_input" from="to_menu" to="to_menu" method="_on_gui_input"]
[connection signal="gui_input" from="drop" to="drop" method="_on_gui_input"]
